Fixed Kora Java and Kora Kotlin images and updated builds and deps